--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
-    "react-owl-carousel-autoheight": "^1.0.1",
-    "sass": "^1.42.1"
+    "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.28.1",
+    "sass": "^1.42.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
