--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@popperjs/core": "^2.10.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.1",
     "next": "11.1.2",
     "node-sass": "^6.0.1",
